--- a/debian/rules
+++ b/debian/rules
@@ -1,15 +1,13 @@
-#DEBUG=-g3 -ggdb3
-NAME=httpbench
-#FLAGS=-c -Wall -std=c99 -pedanti
-#FLAGS=-std=c99
-FLAGS=
-binary: build-arch
-binary-arch: 
-	gcc $(FLAGS) $(NAME).c -o ./debian/usr/bin/$(NAME) -lcurl -lpthread
-binary-indep: 
-build: binar--arch
-clean:
-	rm ./debian/usr/bin/$(NAME) *.deb 2>/dev/null
+#!/usr/bin/make -f
+# -*- makefile -*-
+# Sample debian/rules that uses debhelper.
+# This file was originally written by Joey Hess and Craig Small.
+# As a special exception, when this file is copied by dh-make into a
+# dh-make output file, you may use that output file without restriction.
+# This special exception was added by Craig Small in version 0.37 of dh-make.
 
-debug:
-	gcc $(FLAGS) $(DEBUG) $(NAME).c -o ./debian/usr/bin/$(NAME) -lcurl -lpthread
+# Uncomment this to turn on verbose mode.
+#export DH_VERBOSE=1
+
+%:
+	dh $@ 
