--- a/debian/httpbench/DEBIAN/control
+++ b/debian/httpbench/DEBIAN/control
@@ -3,7 +3,7 @@ Version: 0.0.0
 Architecture: i386
 Maintainer: Paul Buetow <paul@buetow.org>
 Installed-Size: 52
-Depends: libcurl3-gnutls, libc6
+Depends: libc6 (>= 2.4), libcurl3-gnutls (>= 7.16.2-1)
 Section: net
 Priority: optional
 Homepage: http://httpbench.buetow.org
