--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Vcs-Git: git://git.bueto.org/httpbench
 Vcs-Browser: http://web.buetow.org/git/?p=httpbench.git;a=summary
 
 Package: httpbench
-Architecture: i386
+Architecture: any
 Depends: ${shlibs:Depends}
 Description: Simple HTTP bencharking program
  Benchmarks HTTP servers with some features missing in ab and siege.
