--- a/debian/control
+++ b/debian/control
@@ -11,5 +11,5 @@ Vcs-Browser: http://web.buetow.org/git/?p=httpbench.git;a=summary
 Package: httpbench
 Architecture: any
 Depends: ${shlibs:Depends}
-Description: Simple HTTP bencharking program
+Description: Very simple HTTP benchmarking program
  Benchmarks HTTP servers with some features missing in ab and siege.
