--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Paul Buetow <paul@buetow.org>
 Build-Depends: debhelper (>= 8.0.0), libcurl3-gnutls-dev, perl, exuberant-ctags
 Standards-Version: 3.9.2
-Homepage: http://httpbench.buetow.org
+Homepage: http://httpbench.buetow.foo
 Vcs-Git: git://git.bueto.org/httpbench
 Vcs-Browser: http://web.buetow.org/git/?p=httpbench.git;a=summary
 
