--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,8 @@ Build-Depends: debhelper (>= 8.0.0), libcurl3-gnutls-dev, perl
 Standards-Version: 3.9.2
 Homepage: http://httpbench.buetow.foo
 Vcs-Git: https://github.com/rantanplan/httpbench
-Vcs-Browser: http://web.buetow.org/git/?p=httpbench.git;a=summary
+Vcs-Browser: https://github.com/rantanplan/httpbench
+Vcs-Browser: https://github.com/rantanplan/httpbench
 
 Package: httpbench
 Architecture: any
