--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,8 @@ Maintainer: Paul Buetow <paul@buetow.org>
 Build-Depends: debhelper (>= 8.0.0), libcurl3-gnutls-dev, perl, exuberant-ctags
 Standards-Version: 3.9.2
 Homepage: http://httpbench.buetow.foo
-Vcs-Git: git://git.bueto.org/httpbench
-Vcs-Browser: http://web.buetow.org/git/?p=httpbench.git;a=summary
+Vcs-Git: https://github.com/rantanplan/httpbench.git
+Vcs-Browser: https://github.com/rantanplan/httpbench
 
 Package: httpbench
 Architecture: any
